FCurve extrapolation ignored in whenever anything is present in the NLA #115978

Closed
opened 2023-12-09 14:43:33 +01:00 by michael campbell · 8 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.58

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-25 22:37, hash: 1b6cd937ffc8
Worked: 3.6.3
Worked: 3.6.2

Short description of error
extrapolation ignored

Exact steps for others to reproduce the error

  1. open attached file in 4.1 (load ui)
  2. press play.
  3. character stops at last keyframe even though linear extrapolation is enabled.
  4. copy the metarig and paste it in to blender 3.62
  5. play back now works correctly.
  6. back in blender 4.1, disable the nla channel that has the 'walk cycle' strip on it. Now extrapolation will work properly.
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 537.58 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-11-25 22:37, hash: `1b6cd937ffc8` Worked: 3.6.3 Worked: 3.6.2 **Short description of error** extrapolation ignored **Exact steps for others to reproduce the error** 1. open attached file in 4.1 (load ui) 2. press play. 3. character stops at last keyframe even though linear extrapolation is enabled. 4. copy the metarig and paste it in to blender 3.62 5. play back now works correctly. 6. back in blender 4.1, disable the nla channel that has the 'walk cycle' strip on it. Now extrapolation will work properly.
michael campbell added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-09 14:43:33 +01:00
Member

I think I can confirm, will check

I think I can confirm, will check
Philipp Oeser added
Status
Confirmed
Module
Animation & Rigging
and removed
Status
Needs Triage
labels 2023-12-11 10:05:06 +01:00
Member

This probably changed with 9da88301ef

So now a strip in the NLA (even if only edited and not pushed down) will always be evaluated with its Extrapolation -- Hold Hold Forward etc.).

This basically means whenever there is anything else in use in the NLA, you cannot properly use Extrapolation from the FCurves anymore...

CC @nrupsis
CC @nathanvegdahl
CC @dr.sybren

Am I missing something?

This probably changed with 9da88301efea47d184f347f2b2e54742351361d7 So now a strip in the NLA (even if only edited and not pushed down) will always be evaluated with its Extrapolation -- `Hold` `Hold Forward` etc.). This basically means whenever there is anything else in use in the NLA, you cannot properly use Extrapolation from the FCurves anymore... CC @nrupsis CC @nathanvegdahl CC @dr.sybren Am I missing something?
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2023-12-11 10:22:30 +01:00
Philipp Oeser changed title from extrapolation ignored in 4.1, works fine in 3.6 to FCurve extrapolation ignored in whenever anything is present in the NLA 2023-12-11 10:23:08 +01:00

Thanks @lichtwerk for the analysis.

I can't seem to reproduce the bug with the steps above. When I copy-paste the armature into Blender 3.6.5 it behaves the exact same way (linear motion stops after the last key). Pasting into Blender 3.5 crashes Blender for me.

To reproduce this reliably, IMO it's better to have a 3.6 file that works as expected on 3.6, and when opened in 4.1-alpha shows different extrapolation behaviour. So that's what I made, with just a rolling Suzanne (easier to debug than an entire rig). I built the file with Blender 3.5, which shows the expected behaviour (FCurve extrapolation is used when the Action is being extrapolated), while Blender 3.6 already shows the "new" behaviour (NLA "Hold" literally holds the last frame, rather than extrapolating).

I can confirm that 9da88301ef caused this change, though. @nrupsis do you have time to look into this? This could be a good one to fix in 3.6-LTS.

Thanks @lichtwerk for the analysis. I can't seem to reproduce the bug with the steps above. When I copy-paste the armature into Blender 3.6.5 it behaves the exact same way (linear motion stops after the last key). Pasting into Blender 3.5 crashes Blender for me. To reproduce this reliably, IMO it's better to have a 3.6 file that works as expected on 3.6, and when opened in 4.1-alpha shows different extrapolation behaviour. So that's what I made, with just a rolling Suzanne (easier to debug than an entire rig). I built the file with Blender 3.5, which shows the expected behaviour (FCurve extrapolation is used when the Action is being extrapolated), while Blender 3.6 already shows the "new" behaviour (NLA "Hold" literally holds the last frame, rather than extrapolating). I can confirm that 9da88301ef caused this change, though. @nrupsis do you have time to look into this? This could be a good one to fix in 3.6-LTS.
Member

Sorry for not updating the description (I updated it now).

The breaking change is already in 3.6.3.

So the steps are still valid, you have to paste into 3.6.2 though (not 3.6.3) to see it behave "properly".

Sorry for not updating the description (I updated it now). The breaking change is already in 3.6.3. So the steps are still valid, you have to paste into **3.6.2** though (not 3.6.3) to see it behave "properly".
Member

@dr.sybren I'll add it to my todo list.

@dr.sybren I'll add it to my todo list.

Hi, if it helps narrow down the cause of extrapolation not working on the active action when there are pushed down NLA strips active, the version of Blender 3.63 that is still working when I paste into it from 4.1 is:

image

Hi, if it helps narrow down the cause of extrapolation not working on the active action when there are pushed down NLA strips active, the version of Blender 3.63 that is still working when I paste into it from 4.1 is: ![image](/attachments/46d4a0ab-24c7-47dd-9f10-875a17b6dba0)
Member

At a glance, it looks like a missed copy/paste:

in 9da88301ef : (anim_sys.cc, L3238) should be
r_action_strip->flag |= NLASTRIP_FLAG_USR_INFLUENCE | NLASTRIP_FLAG_NO_TIME_MAP;

original: https://projects.blender.org/blender/blender/pulls/107281/files

At a glance, it looks like a missed copy/paste: in 9da88301efea47d184f347f2b2e54742351361d7 : (anim_sys.cc, L3238) should be `r_action_strip->flag |= NLASTRIP_FLAG_USR_INFLUENCE | NLASTRIP_FLAG_NO_TIME_MAP;` original: https://projects.blender.org/blender/blender/pulls/107281/files
Nate Rupsis was assigned by Christoph Lendenfeld 2024-01-04 14:13:30 +01:00

@nrupsis assigned you since you have a PR in the works

@nrupsis assigned you since you have a PR in the works
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-01-11 18:44:59 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115978
No description provided.